# rust-barebones-kernel

./: Cargo.toml  README.md  aarch64.sh  x86_64.sh
.cargo/: config.toml
src/: logging.rs  main.rs  unwind.rs
src/arch/aarch64/: aarch64-unknown-none.json  debug.rs  link.ld  start.s
src/arch/x86/: i686-unknown-kernel.json  link.ld  mod.rs  start.s  x86-unknown-kernel.json
src/arch/x86_64/: link.ld  mod.rs  start.s  x86_64-unknown-kernel.json
src/arch/x86_common/: debug.rs  io.rs
