[package]
name = "rust-barebones-kernel"
version = "0.1.0"
authors = ["Lars Wrenger <lars@wrenger.net>"]
description = "This is designed to be a rust equivalent of the OSDev.org Bare Bones article, presenting the bare minimum you need to get started."
edition = "2018"

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
